Refactor CSS styles, update JavaScript functions, and enhance cart functionality

--- a/client_asset_new/custom/css/cart.css
+++ b/client_asset_new/custom/css/cart.css
@@ -62,6 +62,7 @@ input[type="number"] {
     /* border-bottom: 1px solid #b8b8b8; */
     margin-bottom: 15px;
 }
+
 .cart .main-left .cart-taskbar button {
     border: none;
     background-color: unset;
@@ -96,6 +97,12 @@ input[type="number"] {
 }
 .cart .main-left .cart-item-details {
     flex: 0.6;
+}
+.row-1 {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 .cart .main-left .cart-item-title {
     font-size: clamp(10px, 1vw, 45px);
@@ -198,12 +205,15 @@ input[type="number"] {
     font-size: clamp(13px, 1.2vw, 20px);
 }
 
-.cart .main-right .cart-delivery-title {
-    font-size: clamp(13px, 1.3vw, 20px);
+.cart .main-right .cart-discount-collection-title {
+    font-size: clamp(13px, 1.1vw, 20px);
     font-weight: bold;
+    text-decoration: none;
+    color: unset !important;;
 }
-.cart .main-right .cart-delivery span {
+.cart .main-right .cart-discount-collection p {
     margin: 5px;
+    font-weight: bold;
 }
 
 .cart .checkbox:hover .checkbox__icon {
@@ -214,11 +224,11 @@ input[type="number"] {
 .cart input[type="checkbox"]:checked ~ .text {
     color: var(--base-color);
 }
-/* .cart .main-right .cart-delivery input[type="checkbox"]:checked ~ .text {
+/* .cart .main-right .ccart-discount-collection input[type="checkbox"]:checked ~ .text {
   color: var(--base-color);
 } */
 
-.cart .main-right .cart-delivery {
+.cart .main-right .ccart-discount-collection {
     border-bottom: 1px solid #dbdbdb;
     padding: 10px 0;
 }
