--- a/client_asset_new/custom/css/auth.css
+++ b/client_asset_new/custom/css/auth.css
@@ -1,5 +1,5 @@
 .auth {
-    background-image: url('/uploads/image/system/auth_img-copy.webp');
+    background-image: url('https://cdn.jsdelivr.net/gh/vudevweb/my-library/uploads/image/system/auth_img-copy.webp');
     background-size: 100% 100%;
     height: 100vh;
     display: flex;
