--- a/client_asset_new/custom/css/footer.css
+++ b/client_asset_new/custom/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
     background: linear-gradient(to right, #f8f9fa, #ffffff);
     padding: 80px 0 40px;
-    font-family: "Poppins";
+    /* font-family: "Poppins"; */
     color: #2d3748;
     border-top: 1px solid rgba(0, 0, 0, 0.05);
     z-index: 100;
