--- a/client_asset_new/custom/css/search.css
+++ b/client_asset_new/custom/css/search.css
@@ -18,13 +18,14 @@
     margin-top: 10px;
     position: absolute;
     width: 100%;
+    height: 70vh;
+    overflow: scroll;
     color: #0000008a;
     padding: 12px 24px !important;
-    overflow-y: auto;
     border-radius: 10px !important;
     display: none;
-    max-height: 580px;
-    overflow-y: auto;
+    /* max-height: 580px; */
+    /* overflow-y: auto; */
     z-index: 9999;
 }
 ::-webkit-scrollbar {
@@ -64,6 +65,11 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     margin-bottom: 6px;
 }
+.search_result {
+    height: 85%;
+    overflow: scroll;
+    overflow-x: hidden;
+}
 .search_result a {
     padding-top: calc(var(--geeks-gutter-x) * 0.5);
     padding-bottom: calc(var(--geeks-gutter-x) * 0.5);
@@ -73,4 +79,8 @@
     background-color: #e96b6b3d;
     border-radius: 10px;
     transition: 0.3s ease-in-out;
+}
+.search_category {
+    text-align: center;
+    font-size: clamp(7px,2vw,12px);
 }
